# Neuro-Symbolic-Video-Search-Temporal-Logic

./: .gitignore  .gitmodules  .ruff.toml  Dockerfile  Dockerfile.stormbase  LICENSE  Makefile  README.md  build_dependency.sh  dataset_statistics.py  evaluate_demo.py  example.py  execute_demo.py  execute_demo_v2.py  execute_demo_v3.py  execute_with_mp4.py  execute_with_tlv.py  install.sh  launch_space.sh  main.py  no_nsvs.py  nsvqa_test.py  pull_stormpy.sh  pyproject.toml  ruff.toml  run_diffusion_model.py  run_frame_to_automata.py  temp.txt  vllm_serve.sh
docker/: Dockerfile
experiments/: 1_1_acc_vs_manual_confidence_range.py  1_2_1_calibration.py  1_2_notebook.ipynb  1_3_mapping_threshold_vs_accuracy.py  1_3_notebook.ipynb  2_1_0_notebook_yolo_comparison.ipynb  2_1_1_benchmark_video_search_clip.py  2_1_1_benchmark_video_search_yolo.py  2_1_1_benchmark_video_search_yolo_multithread.py  2_1_1_benchmark_video_search_yolox.py  2_1_2_benchmark_video_search_dino.py  2_2_1_benchmark_video_search_clip_multithread.py  2_2_1_benchmark_video_search_dino_multithread.py  2_2_1_benchmark_video_search_mrcnn.py  2_2_1_benchmark_video_search_yolo_multithread.py  2_2_1_benchmark_video_search_yolox.py  2_2_notebook.ipynb  3_0_0_av_benchmark_video_search_clip.py  3_0_0_av_benchmark_video_search_mrcnn.py  3_0_0_av_benchmark_video_search_yolo.py  3_0_0_av_benchmark_video_search_yolo_clip.py  3_0_0_av_benchmark_video_search_yolox.py  3_0_0_benchmark_video_search_clip_2.py  3_0_notebook.ipynb  3_1_0_timedelta_benchmark_video_search_yolo.py  3_1_1_benchmark_video_search_yolo.py  __arc_1_1_acc_vs_manual_confidence_range.py  __arc__1_2_2_calibration_tsds.py  __dev_random_thing.ipynb  __dev_single_video_result.ipynb  _clipplot_bar.py  _clipplot_box.py  _cliptest.py  _common.py  _dev.py  _metrics.py  common.py  evaluate_benchmark_frame_video.py  evaluate_benchmark_frame_video_with_manual_confidence.py  evaluate_waymo_benchmark_frame_video_with_manual_confidence.py  (+11 more)
notebook/: Run NSVS with Yolo.ipynb
ns_vfs/: __init__.py  frame_searcher.py  main.py  nsvs.py  nsvs_yolo.py  state.py  verification.py  video_to_automaton.py
run_scripts/: 1_2_1_calibration.py  run_data_generator.py  run_frame_searcher.py  run_frame_searcher_regular_video.py  run_frame_sercher_benchmark_video.py  run_frame_sercher_regular_video.py  run_frame_to_automata.py  run_ltl_spec_generator.py  run_nsvs_tl.py  run_video_to_automata.py  run_video_to_automata_with_real_video.py  run_video_to_automata_with_tlv_dataset.py
scripts/: no_nsvs.py  plot.py
test_scripts/: imagenet_classes.txt  test_benchmark_video.ipynb  test_search_algorithm.py  test_yolo.py
testing/: predict.py
tests/: conftest.py  pytest.ini  test_module_name.py
(+229 files in other folders)
