[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
  "ns_vfs",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "store",
  "artifacts, docker, experiments",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.my-tool]
submodule_path = "ns_vfs/model/diffusion/stable_diffusion"

[project]
name = "ns-vfs"
version = "0.0.1"
authors = [{ name = "Minkyu Choi", email = "minkyu.choi@utexas.edu" }]
description = "The pipeline to convert video to automaton"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "omegaconf==2.3.0",
  "hydra-core>=1.3.2",
  "numpy==1.26.4",
  "pandas==2.0.3",
  "sympy==1.13.1",
  "regex==2024.11.6",
  "supervision==0.6.0",
  "roboflow==1.1.61",
  "einops==0.8.0",
  "pytorch-lightning==1.4.2",
  "torchmetrics==0.5.0",
  "ultralytics==8.2.40",
  "clip@git+https://github.com/openai/CLIP.git",
  "cvias@git+https://github.com/Coargus/Computer-Vision-Inference-and-Server.git@nsvqa-dev",
  "vflow@git+https://github.com/Coargus/vflow@v0.0.3-dev",
]
[tool.black]
line-length = 80

[project.urls]
"Homepage" = "https://github.com/UTAustin-SwarmLab/Video-to-Automaton"
"Bug Tracker" = "https://github.com/UTAustin-SwarmLab/Video-to-Automaton"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]
