[project]
name = "nsvs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "opencv-python>=4.11.0.86",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "timm>=1.0.19",
    "tqdm>=4.67.1",
    "transformers>=4.41,<4.47",
]
