[project]
name = "nsvs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "cmake==3.29.6",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "ninja>=1.13.0",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "opencv-python>=4.11.0.86",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "stormpy>=1.10.1",
    "timm>=1.0.19",
    "tqdm>=4.67.1",
    "transformers>=4.41,<4.47",
]

